syntax = "proto3";

package mail;

option go_package = "github.com/azusachino/golong/practices/grpc/proto";

service MailService {
  rpc SendMail(MailRequest) returns (MailResponse) {

  }
}

message MailRequest {
  string mail = 1;
  string text = 2;
}

message MailResponse {
  bool ok = 1;
}
